--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.4.5",
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-calendar": "^5.1.0",
